家里的黄金替换成九大优势视频

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
+<meta name="baidu-site-verification" content="4CfinHhC1f" />
 <meta name="keywords" content="在家兼职，在家创业，管道生意，网络直销，消费联盟">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <title>在家兼职、在家创业 - 管道生意 - 网络直销 - 消费联盟</title>
@@ -94,7 +95,7 @@
 
 <figure class="center">
 <img src="style/illustration/qushi.jpg" alt="事业说明" title="事业说明"/>
-<p>坐在家家里，就可以赚到钱</p>
+<p>坐在家里，就可以赚到钱</p>
 </figure>
 
    </div>
@@ -143,8 +144,8 @@
 </p>
 
 <figure class="center">
-<img src="style/illustration/housegold.jpg" alt="家里的黄金" title="家里的黄金"/>
-<p>家里的“黄金”</p>
+<embed allowfullscreen="true" allownetworking="internal" allowscriptaccess="never" autostart="true" class="blog_video" enablecontextmenu="False" height="425" id="blog_video_1383450259641" invokeurls="false" loop="true" showstatusbar="1" src="http://player.youku.com/player.php/sid/XNTA2NDk1OTAw/v.swf" type="application/x-shockwave-flash" videosource="http://v.youku.com/v_show/id_XNTA2NDk1OTAw.html" videothumb="http://g4.ykimg.com/0100641F46507DF50EF64507E1094B6C194E6D-80F9-0B8E-2CB5-7C9362574B1B" videotitle="赵勇幽默讲解三生中国九大优势%2b%2b" width="500" wmode="opaque">
+<p>公司赵勇激情讲解--九大优势</p>
 </figure>
 
    </div>
