--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
 
 <div id="primary">
   <div id="content" role="main">
-  
+  <figure class="center">
+<img src="style/illustration/kaitou.jpg" alt="恭喜，您来对地方了" title="恭喜，您来对地方了"/>
   <div class="intro">
       忠告：如果您可以用5分钟认真的看完下面文字并联系我，我愿意用一生的时间帮助您！
   </div>
+</figure>
+
 
     <!-- begin article -->
   <article class="post hentry format-standard">
@@ -226,7 +229,8 @@
 <p>三年前的选择，决定了我们今天的生活。我相信，今天您的选择，将会彻底改变您三年后的生活状况，您一定会感谢我！</p>
 
 <figure class="center">
-<img src="style/illustration/hezuo.jpg" alt="合作" title="合作"/>
+<a href="http://wpa.qq.com/msgrd?v=3&uin=770058550&site=qq&menu=yes" target="_blank">
+<img src="style/illustration/hezuo.jpg" alt="合作" title="合作"/></a>
 <p>您愿意了解，我即愿意为您付出</p>
 </figure>
    </div>
@@ -264,7 +268,8 @@
 <p>......</p>
 
 <figure class="center">
-<img src="style/illustration/kefu.jpg" alt="联系我" title="联系我"/>
+<a href="http://wpa.qq.com/msgrd?v=3&uin=770058550&site=qq&menu=yes" target="_blank">
+<img src="style/illustration/kefu.jpg" alt="联系我" title="联系我"/></a>
 <p>您愿意了解，我即愿意为您付出</p>
 </figure>
 
@@ -310,7 +315,7 @@
   <h5 class="widget-title" id="findMe">联系我</h5>  
   <ul>
       <li>
-          <b>QQ: </b> 770058550、2695582185
+          <b>QQ: </b> <a href="http://wpa.qq.com/msgrd?v=3&uin=770058550&site=qq&menu=yes" target="_blank">770058550</a>、<a href="http://wpa.qq.com/msgrd?v=3&uin=2695582185&site=qq&menu=yes" target="_blank">2695582185</a>
       </li>
       <li>我立志帮助100位陌生人，让他们过上健康、体面的生活，您是其中一位吗？</li>
   </ul>
