--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
 <div id="primary">
   <div id="content" role="main">
-  <figure class="center">
-<img src="style/illustration/daodu.jpg" alt="忠告" title="如果您可以用5分钟认真的看完下面文字并联系我，我愿意用一生的时间帮助您！"/>
-</figure>
+  <div class="intro">
+      忠告：如果您可以用5分钟认真的看完下面文字并联系我，我愿意用一生的时间帮助您！
+  </div>
 
 
     <!-- begin article -->
