视频内容用js延迟加载

--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@
 公司不仅有自主研发的保健品、营养品、日用品、床上用品等，同时拥有自己的网上商城--<a href="http://www.yofogo.com" target="_blank">有享网</a>。与不同品牌的商家强强联合，产品覆盖生活衣食住行，涉及生活的方方面面。买彩票，缴电话费，订火车票，订飞机票，订酒店，日用品、鞋包等等。最重要的是我们在这里消费就可以赚钱。我们公司是可以唯一与超市竞争消费者的大型企业，我们提供的平台可以让消费者消费省钱还能赚钱。
 </p>
 
-<figure class="center">
-<embed allowfullscreen="true" allownetworking="internal" allowscriptaccess="never" autostart="true" class="blog_video" enablecontextmenu="False" height="425" id="blog_video_1383450259641" invokeurls="false" loop="true" showstatusbar="1" src="http://player.youku.com/player.php/sid/XNTA2NDk1OTAw/v.swf" type="application/x-shockwave-flash" videosource="http://v.youku.com/v_show/id_XNTA2NDk1OTAw.html" videothumb="http://g4.ykimg.com/0100641F46507DF50EF64507E1094B6C194E6D-80F9-0B8E-2CB5-7C9362574B1B" videotitle="赵勇幽默讲解三生中国九大优势%2b%2b" width="500" wmode="opaque">
+<figure class="center" id="zhaoyong_video">
 <p>公司赵勇激情讲解--九大优势</p>
 </figure>
 
