--- a/index.html
+++ b/index.html
@@ -329,5 +329,14 @@
 </div><!-- #page -->
 
 <script type="text/javascript" src="style/js/scripts.js"></script>
+
+<!-- 百度分享 -->
+<!-- Baidu Button BEGIN -->
+<script type="text/javascript" id="bdshare_js" data="type=slide&amp;img=0&amp;pos=right&amp;uid=1354421" ></script>
+<script type="text/javascript" id="bdshell_js"></script>
+<script type="text/javascript">
+document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + Math.ceil(new Date()/3600000);
+</script>
+<!-- Baidu Button END -->
 </body>
 </html>
