--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="baidu-site-verification" content="4CfinHhC1f" />
 <meta name="keywords" content="网上兼职、在家创业、网上直销">
-<meta name="description" content="在家创业项目，运用全新的网上直销商业模式，最诱人的奖金制度，合法、合理、赚钱，是普通人最佳的在家创业项目，而且我们在网上兼职就可以运作。" />
+<meta name="description" content="在家创业项目，运用全新的网上直销商业模式，最诱人的奖金制度，合法、合理、赚钱，是最佳的网上创业项目，而且我们在网上兼职就可以运作。" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <title>网上兼职在家创业网上直销项目</title>
 <link rel="shortcut icon" href="style/images/favicon.png"/>
