--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 <figure class="center">
 <a href="http://wpa.qq.com/msgrd?v=3&uin=770058550&site=qq&menu=yes" target="_blank">
-<img src="style/illustration/hezuo.jpg" alt="合作" title="合作"/></a>
+<img src="style/illustration/hezuo.jpg" alt="点击联系我" title="点击联系我"/></a>
 <p>您愿意了解，我即愿意为您付出</p>
 </figure>
    </div>
@@ -266,7 +266,7 @@
 
 <figure class="center">
 <a href="http://wpa.qq.com/msgrd?v=3&uin=770058550&site=qq&menu=yes" target="_blank">
-<img src="style/illustration/kefu.jpg" alt="联系我" title="联系我"/></a>
+<img src="style/illustration/kefu.jpg" alt="点击联系我" title="点击联系我"/></a>
 <p>您愿意了解，我即愿意为您付出</p>
 </figure>
 
