添加传统与现在对比图

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <p>我们公司目前已经将这三大趋势的商业模式整合在一块，现在正是迅速发展期，是一家已经走向国际的大型企业。我们做的就是趋势，第一批下海经商的发了，第一批炒股的发了，第一批做电子商务的发了，今天您想做第一批在家创业的网商吗？</p>
 
 <figure class="center">
-<img src="style/illustration/qushi.jpg" alt="事业说明" title="事业说明"/>
+<img src="style/illustration/qushi.jpg" alt="坐在家里赚钱" title="坐在家里赚钱"/>
 <p>坐在家里，就可以赚到钱</p>
 </figure>
 
@@ -138,10 +138,13 @@
 
 </p>
 
+<figure class="center">
+<img src="style/illustration/duibi.jpg" alt="坐在家里赚钱" title="坐在家里赚钱"/>
+<p>我们公司颠覆了传统的直销模式。</p>
+</figure>
 
-<p>我们公司颠覆了传统的直销模式，完善了传统直销缺点。</p>
 <p>
-公司不仅有自主研发的保健品、营养品、日用品、床上用品等，同时拥有自己的网上商城--<a href="http://www.yofogo.com" target="_blank">有享网</a>。与不同品牌的商家强强联合，产品覆盖生活衣食住行，涉及生活的方方面面。买彩票，缴电话费，订火车票，订飞机票，订酒店，日用品、鞋包等等。最重要的是我们在这里消费就可以赚钱。我们公司是可以唯一与超市竞争消费者的大型企业，我们提供的平台可以让消费者消费省钱还能赚钱。
+公司不仅有自主研发的保健品、营养品、日用品、床上用品等，同时拥有自己的网上商城--<a href="http://www.yofogo.com" target="_blank">有享网</a>。与不同品牌的商家强强联合，产品覆盖衣食住行，涉及生活的方方面面。买彩票，缴电话费，订火车票，订飞机票，订酒店，日用品、鞋包等等。最重要的是我们在这里消费就可以赚钱。我们公司是可以唯一与超市竞争消费者的大型企业，我们提供的平台可以让消费者消费省钱还能赚钱。
 </p>
 
 <figure class="center" id="zhaoyong_video">
