禁止网页被选择，复制粘贴

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 </p>
 
 <figure class="center">
-<img src="style/illustration/duibi.jpg" alt="坐在家里赚钱" title="坐在家里赚钱"/>
+<img src="style/illustration/duibi.jpg" alt="网上直销" title="网上直销"/>
 <p>我们公司颠覆了传统的直销模式。</p>
 </figure>
 
