--- a/yangpijuan/index.html
+++ b/yangpijuan/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset=utf-8 />
 <title>羊皮卷</title>
+<meta name="keywords" content="羊皮卷、羊皮卷朗诵">
+<meta name="description" content="羊皮卷朗诵附带歌词" />
 <link href="style/reset.css" rel="stylesheet" />
 <link href="style/player.css" rel="stylesheet"/>
 <script src="js/jquery-1.8.3.min.js"></script>
@@ -193,7 +195,7 @@ $(document).ready(function(){
     </div>
 
     <div id="lrc">
-    	<div>暂无歌词</div>
+    	<div></div>
     	<ul></ul>
     </div>
 
