--- a/yangpijuan/index.html
+++ b/yangpijuan/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset=utf-8 />
 <title>羊皮卷</title>
+<link rel="shortcut icon" href="favicon.ico">
 <meta name="keywords" content="羊皮卷、羊皮卷朗诵">
 <meta name="description" content="羊皮卷朗诵附带歌词" />
 <link href="style/reset.css" rel="stylesheet" />
