--- a/yangpijuan/index.html
+++ b/yangpijuan/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset=utf-8 />
 <title>羊皮卷</title>
-<link rel="shortcut icon" href="favicon.ico">
+<link rel="shortcut icon" type="image/ico" href="yang_favicon.ico">
 <meta name="keywords" content="羊皮卷、羊皮卷朗诵">
 <meta name="description" content="羊皮卷朗诵附带歌词" />
 <link href="style/reset.css" rel="stylesheet" />
@@ -136,8 +136,7 @@ $(document).ready(function(){
 		    "images/bg/3.jpg",
 		    "images/bg/4.jpg",
 		    "images/bg/5.jpg",
-		    "images/bg/6.jpg",
-		    "images/bg/7.jpg"
+		    "images/bg/6.jpg"
 		], {
 			fade: 750,
 			duration: 30000});
