--- a/yangpijuan/index.html
+++ b/yangpijuan/index.html
@@ -84,6 +84,7 @@ $(document).ready(function(){
         },
             
         ended: function (event) {
+			/*
             nowMusic ++;
             if (nowMusic > $("#list>ul>li").length - 1) {
             nowMusic = 0;
@@ -95,7 +96,12 @@ $(document).ready(function(){
             $("#jplayer").jPlayer("clearMedia").jPlayer("setMedia",{mp3:"music/" + music1 + ".mp3"}).jPlayer("play");
             $("#jp-title").empty().append(music1);
             $("#list>ul>li").eq(nowMusic).addClass("now").siblings("li").removeClass();
-
+			*/
+			$("#jplayer").jPlayer("stop");
+			$(".jp-pause").css({"display":"none"});
+			$("#lrc>ul").css("top","0");
+			$("#list>ul>li").eq(0).addClass("now").siblings("li").removeClass();
+			
         },
     swfPath: "js",
     supplied: "mp3",
@@ -127,7 +133,9 @@ $(document).ready(function(){
         "top": (_top - 9) * (-1) + "px"
         },400);
     });
-
+	
+	
+	
     /*
     $("#jp_container_1").mouseenter(function(){
         $(this).animate({right: -40});
@@ -152,27 +160,21 @@ $(document).ready(function(){
 </head>
 <body>
 	<div id="J-bg-slide"></div>
-    <div id="jp-title"></div>
     <div id="jplayer"></div>
     <div id="jp_container_1" class="jp-audio">
 
 	    <div class="jp-interface">
-		    <ul class="jp-controls">
-			    <li><a href="javascript:;" class="jp-play" tabindex="1">play</a></li>
-			    <li><a href="javascript:;" class="jp-pause" tabindex="1">pause</a></li>
-			    <li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">mute</a></li>
-			    <li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">unmute</a></li>
-			    <li><a href="javascript:;" class="jp-volume-max" tabindex="1" title="max volume">max volume</a></li>
-		    </ul>
+		    <div class="jp-controls">
+			    <a href="javascript:;" class="jp-play" tabindex="1">play</a>
+			    <a href="javascript:;" class="jp-pause" tabindex="1" style="display:none;">pause</a>
+		    </div>
+			<div id="jp-title"></div>
 		    <div class="jp-progress">
 			    <div class="jp-seek-bar">
 			    	<div class="jp-play-bar"></div>
 			    </div>
 		    </div>
-		    <div class="jp-volume-bar">
-		    	<div class="jp-volume-bar-value"></div>
-		    </div>
-		    <div class="jp-time-holder">
+		    <div class="jp-time-holder" style="display:none;">
 		    	<div class="jp-current-time"></div>
 		   	 	<div class="jp-duration"></div>
 		    </div>
