修改主页跳转方式

--- a/yangpijuan/index.html
+++ b/yangpijuan/index.html
@@ -174,7 +174,7 @@ $(document).ready(function(){
     <div id="jp_container_1" class="jp-audio">
 	    <div class="jp-interface">
 		    <div class="jp-controls">
-				<a class="J-home icon icon-home" href="http://wwww.ruhong.net" target="_blank" title="主页"></a>
+				<a class="J-home icon icon-home" href="/" target="_blank" title="主页"></a>
 			    <a href="javascript:;" class="jp-play icon icon-play" title="播放"></a>
 			    <a href="javascript:;" class="jp-pause icon icon-pause" style="display:none;" title="暂停"></a>
 				<a href="javascript:;" class="J-volume icon icon-volume icon-volume-medium" title="调节音量"></a>			
