修改关于羊皮卷meta

--- a/yangpijuan/info.html
+++ b/yangpijuan/info.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>羊皮卷</title>
+<title>关于羊皮卷</title>
 <link rel="shortcut icon" type="image/ico" href="yang_favicon.ico">
-<meta name="keywords" content="羊皮卷、羊皮卷朗诵">
-<meta name="description" content="羊皮卷朗诵附带歌词" />
+<meta name="keywords" content="关于羊皮卷">
+<meta name="description" content="羊皮卷将带给你智慧和财富，引导你走向成功和幸福，值得你一生珍藏！" />
 <link href="style/reset.css" rel="stylesheet" />
 <link href="style/player.css" rel="stylesheet"/>
 <script src="js/jquery-1.8.3.min.js"></script>
