--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--[if IE 9]>
 <link rel="stylesheet" type="text/css" href="style/css/ie9.css" media="all" />
 <![endif]-->
-<script type="text/javascript" src="style/js/jquery-1.7.1.min.js"></script>
+<script src="//libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript" src="style/js/ddsmoothmenu.js"></script>
 <script type="text/javascript" src="style/js/html5.js"></script>
 <script type="text/javascript" src="style/js/jquery.fitvids.js"></script>
