--- a/yangpijuan/index.html
+++ b/yangpijuan/index.html
@@ -8,9 +8,9 @@
 <meta name="description" content="羊皮卷朗诵附带歌词" />
 <link href="style/reset.css" rel="stylesheet" />
 <link href="style/player.css" rel="stylesheet"/>
-<script src="js/jquery-1.8.3.min.js"></script>
-<script src="js/jquery.jplayer.min.js"></script>
-<script src="js/jquery.backstretch.min.js"></script>
+<script src="//libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
+<script src="//cdn.jsdelivr.net/jplayer/2.4.1/jquery.jplayer.min.js"></script>
+<script src="//cdn.jsdelivr.net/jquery.backstretch/2.0.3/jquery.backstretch.min.js"></script>
 <script>
 
 $(document).ready(function(){
