--- a/yangpijuan/info.html
+++ b/yangpijuan/info.html
@@ -8,20 +8,19 @@
 <meta name="description" content="羊皮卷将带给你智慧和财富，引导你走向成功和幸福，值得你一生珍藏！" />
 <link href="style/reset.css" rel="stylesheet" />
 <link href="style/player.css" rel="stylesheet"/>
-<script src="js/jquery-1.8.3.min.js"></script>
-<script src="js/jquery.jplayer.min.js"></script>
-<script src="js/jquery.backstretch.min.js"></script>
+<script src="//yangpijuan.qiniudn.com/jquery/jquery-1.8.3.min.js"></script>
+<script src="//yangpijuan.qiniudn.com/jquery/jquery.backstretch.min.js"></script>
 <script>
 
 $(document).ready(function(){
 	
 	$.backstretch([
-		    "images/bg/1.jpg",
-		    "images/bg/2.jpg",
-		    "images/bg/3.jpg",
-		    "images/bg/4.jpg",
-		    "images/bg/5.jpg",
-		    "images/bg/6.jpg"
+		    "//yangpijuan.qiniudn.com/1.jpg",
+            "//yangpijuan.qiniudn.com/2.jpg",
+            "//yangpijuan.qiniudn.com/3.jpg",
+            "//yangpijuan.qiniudn.com/4.jpg",
+            "//yangpijuan.qiniudn.com/5.jpg",
+            "//yangpijuan.qiniudn.com/6.jpg"
 		], {
 			fade: 750,
 			duration: 30000});
