羊皮卷百度轻应用接入

--- a/yangpijuan/index.html
+++ b/yangpijuan/index.html
@@ -6,6 +6,8 @@
 <link rel="shortcut icon" type="image/ico" href="yang_favicon.ico">
 <meta name="keywords" content="羊皮卷、羊皮卷朗诵">
 <meta name="description" content="羊皮卷朗诵附带歌词" />
+<meta name="baidu-tc-cerfication" content="455f7f6ad9099f97659c19c1d1bd1bbb" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <link href="style/reset.css" rel="stylesheet" />
 <link href="style/player.css" rel="stylesheet"/>
 <script src="//yangpijuan.qiniudn.com/jquery/jquery-1.8.3.min.js"></script>
