--- a/yangpijuan/info.html
+++ b/yangpijuan/info.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset=utf-8 />
 <title>关于羊皮卷</title>
-<link rel="shortcut icon" type="image/ico" href="yang_favicon.ico">
+<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 <meta name="keywords" content="关于羊皮卷">
-<meta name="description" content="羊皮卷将带给你智慧和财富，引导你走向成功和幸福，值得你一生珍藏！" />
+<meta name="description" content="羊皮卷犹如一炷明烛，照亮你的人生之路，它将帮助你获得成功与财富，改变命运，走向幸福生活！" />
 <link href="style/reset.css" rel="stylesheet" />
 <link href="style/player.css" rel="stylesheet"/>
 <script src="//yangpijuan.qiniudn.com/jquery/jquery-1.8.3.min.js"></script>
