lrc 访问转到云存储

--- a/yangpijuan/index.html
+++ b/yangpijuan/index.html
@@ -35,7 +35,7 @@ $(document).ready(function(){
         lrcTime = [];
 	    $.ajax({
 	    	type: "GET",
-	    	url: "lrc/"+encodeURI(l) + ".lrc",
+	    	url: "//yangpijuan.qiniudn.com/lrc/"+ encodeURI(l) + ".lrc",
 	    	dataType: "text",
 	    	success: function(data){
                 var i = 0,
