--- a/yangpijuan/index.html
+++ b/yangpijuan/index.html
@@ -11,7 +11,7 @@
 <link href="style/reset.css" rel="stylesheet" />
 <link href="style/player.css" rel="stylesheet"/>
 <script src="//yangpijuan.qiniudn.com/jquery/jquery-1.8.3.min.js"></script>
-<script src="//cdn.jsdelivr.net/jplayer/2.4.1/jquery.jplayer.min.js"></script>
+<script src="//yangpijuan.qiniudn.com/jquery/jquery.jplayer.min.js"></script>
 <script src="//yangpijuan.qiniudn.com/jquery/jquery.backstretch.min.js"></script>
 <script>
 
