--- a/yangpijuan/info.html
+++ b/yangpijuan/info.html
@@ -6,8 +6,7 @@
 <link rel="shortcut icon" type="image/ico" href="favicon.ico">
 <meta name="keywords" content="关于羊皮卷">
 <meta name="description" content="羊皮卷犹如一炷明烛，照亮你的人生之路，它将帮助你获得成功与财富，改变命运，走向幸福生活！" />
-<link href="style/reset.css" rel="stylesheet" />
-<link href="style/player.css" rel="stylesheet"/>
+<link href="//yangpijuan.qiniudn.com/style/global.min.css" rel="stylesheet"/>
 <script src="//yangpijuan.qiniudn.com/jquery/jquery-1.8.3.min.js"></script>
 <script src="//yangpijuan.qiniudn.com/jquery/jquery.backstretch.min.js"></script>
 <script>
