--- a/yangpijuan/index.html
+++ b/yangpijuan/index.html
@@ -3,17 +3,19 @@
 <head>
 <meta charset=utf-8 />
 <title>羊皮卷</title>
-<link rel="shortcut icon" type="image/ico" href="favicon.ico">
+<link rel="shortcut icon" type="image/ico" href="//yangpijuan.qiniudn.com/favicon.ico">
 <meta name="keywords" content="羊皮卷、羊皮卷朗诵">
 <meta name="description" content="羊皮卷犹如一炷明烛，照亮你的人生之路，它将帮助你获得成功与财富，改变命运，走向幸福生活！" />
 <meta name="baidu-tc-cerfication" content="455f7f6ad9099f97659c19c1d1bd1bbb" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <link href="//yangpijuan.qiniudn.com/style/global.min.css" rel="stylesheet"/>
 <script src="//yangpijuan.qiniudn.com/jquery/jquery-1.8.3.min.js"></script>
+<script src="//yangpijuan.qiniudn.com/jquery/jquery.xdomainrequest.min.js"></script>
 <script src="//yangpijuan.qiniudn.com/jquery/jquery.jplayer.min.js"></script>
 <script src="//yangpijuan.qiniudn.com/jquery/jquery.backstretch.min.js"></script>
 <script>
 $(document).ready(function(){
+    jQuery.support.cors = true;
     var txt,
         lrc,
         lrcTime,
@@ -97,7 +99,7 @@ $(document).ready(function(){
 			$("#lrc>ul>li").eq(0).addClass("now").siblings("li").removeClass();
 			
         },
-    swfPath: "js",
+    swfPath: "//yangpijuan.qiniudn.com/jquery",
     supplied: "mp3",
     wmode: "window"
     });    
