修改歌词列表在ie下闪动问题

--- a/yangpijuan/index.html
+++ b/yangpijuan/index.html
@@ -8,7 +8,7 @@
 <meta name="description" content="羊皮卷犹如一炷明烛，照亮你的人生之路，它将帮助你获得成功与财富，改变命运，走向幸福生活！" />
 <meta name="baidu-tc-cerfication" content="455f7f6ad9099f97659c19c1d1bd1bbb" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<link href="//yangpijuan.qiniudn.com/style/global.min.css" rel="stylesheet"/>
+<link href="//yangpijuan.qiniudn.com/style/global.min.css?ver=3" rel="stylesheet"/>
 </head>
 
 <body>
@@ -40,7 +40,6 @@
     
     <div id="list_box">
 	    <div id="list">
-	    
 		    <ul>
 		        <li><a href="javascript:;">01. <em>羊皮卷一</em></a></li>
 		        <li><a href="javascript:;">02. <em>羊皮卷二</em></a></li>
@@ -54,7 +53,7 @@
 		        <li><a href="javascript:;">10. <em>羊皮卷十</em></a></li>
 		    </ul>
 
-	    	<div><span></span></div>
+	    	<div><span> </span></div>
 	    </div>
     </div>
 
@@ -206,6 +205,9 @@
         },function(){
             $('.J-home, .J-volume, .J-about').css('visibility','hidden');
         });
+
+        $('#list_box').css('visibility','visible');
+
         $.backstretch([
                 "//yangpijuan.qiniudn.com/1.jpg",
                 "//yangpijuan.qiniudn.com/2.jpg",
