去掉版本号标志

--- a/yangpijuan/index.html
+++ b/yangpijuan/index.html
@@ -8,7 +8,7 @@
 <meta name="description" content="羊皮卷犹如一炷明烛，照亮你的人生之路，它将帮助你获得成功与财富，改变命运，走向幸福生活！" />
 <meta name="baidu-tc-cerfication" content="455f7f6ad9099f97659c19c1d1bd1bbb" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<link href="//yangpijuan.qiniudn.com/style/global.min.css?ver=3" rel="stylesheet"/>
+<link href="//yangpijuan.qiniudn.com/style/global.min.css" rel="stylesheet"/>
 </head>
 
 <body>
