--- a/index.html
+++ b/index.html
@@ -8,19 +8,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <title>在家创业网上直销项目</title>
 <link rel="shortcut icon" href="style/images/favicon.png"/>
-<link rel="stylesheet" type="text/css" href="style.css" media="all" />
-<link rel="stylesheet" type="text/css" href="style/css/queries.css" media="all" />
+<link rel="stylesheet" href="style.css" media="all" />
+<link rel="stylesheet" href="style/css/queries.css" media="all" />
 <!--[if IE 8]>
 <link rel="stylesheet" type="text/css" href="style/css/ie8.css" media="all" />
 <![endif]-->
 <!--[if IE 9]>
 <link rel="stylesheet" type="text/css" href="style/css/ie9.css" media="all" />
 <![endif]-->
-<script src="//libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
-<script type="text/javascript" src="style/js/ddsmoothmenu.js"></script>
-<script type="text/javascript" src="style/js/html5.js"></script>
-<script type="text/javascript" src="style/js/jquery.fitvids.js"></script>
-<script type="text/javascript" src="style/js/selectnav.js"></script>
 </head>
 
 <body>
@@ -332,15 +327,21 @@
   </div><!-- #wrapper -->
 </div><!-- #page -->
 
-<script type="text/javascript" src="style/js/scripts.js"></script>
+<script src="//yangpijuan.qiniudn.com/jquery/jquery-1.8.3.min.js"></script>
+<script src="style/js/ddsmoothmenu.js"></script>
+<script src="style/js/html5.js"></script>
+<script src="style/js/jquery.fitvids.js"></script>
+<script src="style/js/selectnav.js"></script>
+<script src="style/js/scripts.js"></script>
 
 <!-- 百度分享 -->
 <!-- Baidu Button BEGIN -->
-<script type="text/javascript" id="bdshare_js" data="type=slide&amp;img=0&amp;pos=right&amp;uid=1354421" ></script>
-<script type="text/javascript" id="bdshell_js"></script>
-<script type="text/javascript">
-document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + Math.ceil(new Date()/3600000);
+<script id="bdshare_js" data="type=slide&amp;img=0&amp;pos=right&amp;uid=1354421" ></script>
+<script id="bdshell_js"></script>
+<script>
+    document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + Math.ceil(new Date()/3600000);
 </script>
 <!-- Baidu Button END -->
 </body>
+
 </html>
