有享网产品，保障

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </figure>
 
 <p>
-公司不仅有自主研发的保健品、营养品、日用品、床上用品等，同时拥有自己的网上商城--<a href="http://www.yofogo.com" target="_blank">有享网</a>。与各大知名品牌的商家强强联合，产品覆盖衣食住行，涉及生活的方方面面。买彩票，缴电话费，订火车票，订飞机票，订酒店，日用品、鞋包等等。最重要的是我们在这里消费就可以赚钱。我们公司是可以唯一与超市竞争消费者的大型企业，我们提供的平台可以让消费者省钱还能赚钱。就比如缴电话费，我们在营业厅是不是要花100块才能缴100的话费，而在我们平台，您只需花99.3块就可以缴100的话费，是不是省钱呢？
+公司不仅有自主研发的保健品、营养品、日用品、床上用品等，同时拥有自己的网上商城--<a href="http://www.yofogo.com" target="_blank">有享网</a>。与各大知名品牌的商家强强联合，产品覆盖衣食住行，涉及生活的方方面面。买彩票，缴电话费，订火车票，订飞机票，订酒店，日用品、鞋包等等。每一款产品都由太平洋财产保险公司担保，为您提供最可靠的保障。我们公司是可以唯一与超市竞争消费者的大型企业，我们提供的平台可以让消费者省钱还能赚钱。就比如缴电话费，我们在营业厅是不是要花100块才能缴100的话费，而在我们平台，您只需花99.3块就可以缴100的话费，是不是省钱呢？
 </p>
 
 <!--
