--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <p>我们的商业模式融合了电子商务、直销、消费联盟。作为一家特别是有竞争力的企业，我们也是模式致胜。同时我们也是一家合法拿牌的直销公司，因为只有直销行业，我们才可以做这样的管道生意。我们是在网上做直销，不需要在地面上推销产品，而是以消费为导向。我们只是在家里上网就可以运作全国市场。这种模式于2009年7月开始实行。就是因为这个模式使得我们公司和其他直销公司都不一样，可以说是最新的直销运作模式--“跳出直销做直销”。</p>
 
-<p>提到直销不得不说一下美国的A公司——直销界的老大，它在美国就实行了这种电子商务（异业联盟）的模式，和成千上万家企业联盟合作，目前A的联盟商品超过了120多万种。它把人们生活中的衣食住行的商品全部架接到了自己的公司里来，就连奔驰，宝马，连保险和很多其它的领域都嫁接到自己的公司来做了，所以只要是美国A公司的会员哪怕就是买袋盐，一袋米，甚至一包牙签都能算业绩，也就是说在A公司组建了一个庞大的消费联盟，让我们顾客消费省钱的同时还可以赚到钱，这种模式是不是非常的好？现在在美国，有50%的美国公民都是A公司的会员。可是，美国A公司在中国没有实现异业联盟，然而我们公司率先开始嫁接这一块。</p>
+<p>提到直销不得不说一下美国的A公司——直销界的老大，它在美国就实行了这种电子商务（异业联盟）的模式，和成千上万家企业联盟合作，目前A公司的联盟商品超过了120多万种。它把人们生活中的衣食住行的商品全部架接到了自己的公司里来，就连奔驰，宝马，连保险和很多其它的领域都嫁接到自己的公司来做了，所以只要是美国A公司的会员哪怕就是买袋盐，一袋米，甚至一包牙签都能算业绩，也就是说在A公司组建了一个庞大的消费联盟，让我们顾客消费省钱的同时还可以赚到钱，这种模式是不是非常的好？现在在美国，有50%的美国公民都是A公司的会员。可是，美国A公司在中国没有实现异业联盟，然而我们公司率先开始嫁接这一块。</p>
 
 <p>
 我们的消费联盟利用了直销的致富理念，将更多的消费者集中起来。我们在超市，在商场，在专卖店购物，是不是一直都在花钱？ 今天，我们公司会慢慢把这些日常消费整合起来，只要成为我们公司的会员，在我们平台一样可以购买到日常消费的产品。不同的是，我们这里跟您的收入挂钩，您就不仅仅是单纯的消费者了，您的消费被算作是对企业的投资，不仅能省钱，还可以赚到钱。</p>
