首页和羊皮卷页面添加百度统计代码

--- a/yangpijuan/index.html
+++ b/yangpijuan/index.html
@@ -221,7 +221,12 @@
     });
 
     </script>
-
+	<!-- Baidu 统计 BEGIN -->
+	<script type="text/javascript">
+		var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+		document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F7c239ac3dfc6f3c6e0dedc41c10dafdd' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	<!-- Baidu 统计 END -->
 </body>
 
 </html>
