首页更新百度统计代码

--- a/index.html
+++ b/index.html
@@ -337,9 +337,9 @@
 </script>
 <!-- Baidu Button END -->
 <!-- Baidu 统计 BEGIN -->
-<script>
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F7e1450221295a451028c8c1442c66300' type='text/javascript'%3E%3C/script%3E"));
+<script type="text/javascript">
+	var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+	document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F7e1450221295a451028c8c1442c66300' type='text/javascript'%3E%3C/script%3E"));
 </script>
 <!-- Baidu 统计 END -->
 </body>
