首页改为cnzz数据统计

--- a/index.html
+++ b/index.html
@@ -336,12 +336,9 @@
     document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + Math.ceil(new Date()/3600000);
 </script>
 <!-- Baidu Button END -->
-<!-- Baidu 统计 BEGIN -->
-<script type="text/javascript">
-	var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-	document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F80c24a58f1701a45d6589dd046ea22b8' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<!-- Baidu 统计 END -->
+<!-- CNZZ数据统计 BEGIN -->
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1000369032'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1000369032%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
+<!-- CNZZ数据统计 统计 END -->
 </body>
 
 </html>
